<resources>
    <string name="app_name">POSKasir</string>
    <string name="title">POSKasir</string>
    <string name="master">Master</string>
    <string name="pos">Order</string>
    <string name="report">Laporan</string>
    <string name="sales">Penjualan</string>
    <string name="sales_item">Jenis</string>
    <string name="item">Makanan/Minuman</string>
    <string name="item_group">Jenis Makanan/Minuman</string>
    <string name="item_label">Gambar</string>
    <string name="delete_picture">Hapus Gambar</string>
    <string name="name">Nama</string>
    <string name="category">Kategori</string>
    <string name="price">Harga</string>
    <string name="delete">Hapus</string>
    <string name="save">Simpan</string>
    <string name="cancel">Batal</string>
    <string name="back">Kembali</string>
    <string name="select">Pilih</string>
    <string name="print">Cetak Nota</string>
    <string name="edit_itemgroup">Tambah/Edit Jenis Makanan/Minuman</string>
    <string name="add_item">+ Tambah Makanan/Minuman</string>
    <string name="add_itemgroup">Tambah Jenis Makanan/Minuman</string>
    <string name="totalprice">Rp0</string>
    <string name="subtotal">SubTotal</string>
    <string name="total">Total</string>
    <string name="next">Lanjut</string>
    <string name="change">Kembalian</string>
    <string name="pay">Bayar</string>
    <string name="tax">Pajak</string>
    <string name="done">Selesai</string>
    <string name="imei">IMEI</string>
    <string name="nopd">No.PD</string>
    <string name="restaurant">Restoran</string>
    <string name="register">Daftar</string>
    <string name="address">Alamat</string>
    <string name="heartbeat">Heart Beat</string>
    <string name="speed_order">Speed Order</string>
    <string name="no_paper">Kertas Habis</string>
    <string name="buff_fulled">Buffer Penuh</string>
    <string name="ip">IP</string>
    <string name="log">Log</string>
    <string name="scheduler">Scheduler</string>
</resources>
