<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    tools:context=".MainActivityFragment">

    <include layout="@layout/view_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/master_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/main_bg_rounded"
            android:text="@string/master" />

        <Button
            android:id="@+id/pos_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/main_bg_rounded"
            android:text="@string/pos" />

        <Button
            android:id="@+id/report_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/main_bg_rounded"
            android:text="@string/report" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/main_bg_rounded"
            android:text="@string/add_item" />
    </LinearLayout>

</RelativeLayout>
