<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/q10"
        android:background="@drawable/main_bg_rounded"
        android:gravity="center"
        android:padding="@dimen/q10"
        android:text="@string/speed_order"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text50"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/q5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/q5"
            android:background="@drawable/main_bg_rounded"
            android:padding="@dimen/q5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtotal"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text21" />

            <TextView
                android:id="@+id/subprice_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/totalprice"
                android:textSize="@dimen/text21" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/q5"
            android:background="@drawable/main_bg_rounded"
            android:padding="@dimen/q5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tax"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text21" />

            <TextView
                android:id="@+id/taxprice_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/totalprice"
                android:textSize="@dimen/text21" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/q5"
            android:background="@drawable/main_bg_rounded"
            android:padding="@dimen/q5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text21" />

            <TextView
                android:id="@+id/totalprice_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/totalprice"
                android:textSize="@dimen/text21" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/q5"
            android:background="@drawable/main_bg_rounded"
            android:padding="@dimen/q5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pay"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text21" />

            <EditText
                android:id="@+id/payprice_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="25"
                android:gravity="center"
                android:inputType="number"
                android:textSize="@dimen/text21" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/q5"
            android:background="@drawable/main_bg_rounded"
            android:padding="@dimen/q5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text21" />

            <TextView
                android:id="@+id/changeprice_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/totalprice"
                android:textSize="@dimen/text21" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/done_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/q5"
            android:background="@drawable/main_bg_rounded"
            android:text="@string/done" />
    </LinearLayout>
</LinearLayout>