<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_header" />

    <TextView
        android:id="@+id/subtotal_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/q5"
        android:background="@drawable/main_bg_rounded"
        android:gravity="center"
        android:padding="@dimen/q5"
        android:text="@string/totalprice"
        android:textSize="@dimen/text24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/q5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/print_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_bg_rounded"
            android:gravity="center"
            android:padding="@dimen/q5"
            android:text="@string/print"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text24" />

        <TextView
            android:id="@+id/void_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/q5"
            android:layout_weight="1"
            android:background="@drawable/main_bg_rounded"
            android:gravity="center"
            android:padding="@dimen/q5"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text24" />
    </LinearLayout>

    <ListView
        android:id="@+id/report_detail_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/q5"
        android:background="@drawable/main_bg_rounded" />
</LinearLayout>
